# llmq

./: .gitattributes  .gitignore  README.md  gitfilters.sh  pyproject.toml
sample/: code.py  sample.yaml  sample_api_doc.md  sample_code_recommendations_prompt.txt  sample_code_style.md  sample_compare_doc_to_code_prompt.txt
src/llmq/: __init__.py  cli.py  main.py  pipeline.py
src/llmq/services/: __init__.py  llm_service.py
